alignment fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ img {
 }
 
 .carasol {
-    padding: 10px 10px 10px 10px;
+    padding: 5px 5px 5px 5px;
     background: rgb(29, 29, 28);
 }
 
